# _blog_old

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Gemfile  README.md  _config.yml  convert.py  index.html  justfile  pyproject.toml  tasks.py
.github/workflows/: jekyll-build.yml
_includes/: head.html  scripts.html
_notebooks/: abstract-classes-in-python.ipynb  altair-high-low-plots-how-to.ipynb  arima-how-to.ipynb  byte-pair-encoding.ipynb  cloud-system-diagrams-in-python.ipynb  code-pandas-pipelines.ipynb  code-pylint-linting-logging-fstring-interpolation.ipynb  code-python-diagrams-cloud-system-diagrams.ipynb  code-python-merging-dictionaries.ipynb  code-python-pdb.ipynb.unfinished  code-sklearn-pipelines.ipynb  grid-searching.ipynb  linting-logging-fstring-interpolation.ipynb  merging-dictionaries-in-py39.ipynb  pipelines-how-to.ipynb  pipes-in-pandas.ipynb
_posts/: 2020-01-14-arima-how-to-pt-1.md  2021-11-23-refactoring-code-fico-business-logic.md  2021-12-12-from-scratch-barcodes.md  2022-01-06-code-sklearn-pipelines.md  2022-01-06-sklearn-pipelines-how-to.md  2022-01-07-from-scratch-barcodes.md  2022-01-07-refactoring-code-fico-business-logic.md  2022-01-07-test-post.md  2022-01-08-code-sklearn-gridsearchcv.md  2022-01-08-grid-searching.md  2022-01-08-sklearn-pipelines-how-to.md  2022-01-14-arima-how-to-pt-1.md  2022-01-14-statistics-timeseries-arima.md  2022-01-21-altair-high-low-plots-how-to.md  2022-01-21-code-snipper-altair-high-low-plots-how-to.md  2022-01-23-byte-pair-encoding.md  2022-01-23-cs-algorithm-byte-pair-encoding.md  2022-03-05-cloud-system-diagrams-in-python.md  2022-03-05-code-python-diagrams-cloud-system-diagrams.md  2022-03-07-cloud-system-diagrams-in-python.md  2022-03-28-code-pylint-linting-logging-fstring-interpolation.md  2022-03-28-linting-logging-fstring-interpolation.md  2022-03-29-abstract-classes-in-python.md  2022-03-29-code-python-abstract-classes.md  2022-04-11-code-pandas-pipelines.md  2022-04-11-pipes-in-pandas.md  2022-05-24-code-python-merging-dictionaries.md  2022-05-24-merging-dictionaries-in-py39.md  2022-06-09-kafka-101.md
_posts/not_converting_to_new_blog/: 2021-11-23-refactoring-code-fico-business-logic.md
assets/css/: main.scss
data/: sbux.csv
