[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["James Salvatore <jimmy.c.salvatore@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.5"
pandas = "^1.3.5"
altair = "^4.1.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.1"
openpyxl = "^3.0.9"
sklearn = "^0.0"
mlflow = "^1.22.0"
diagrams = "^0.21.1"
nbqa = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.930"
pre-commit = "^2.16.0"
pydantic = "^1.8.2"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
Sphinx = "^4.3.2"
numpydoc = "^1.1.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"
tox = "^3.24.4"
ipykernel = "^6.6.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
invoke = "^1.6.0"
nbconvert = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ========================================
# PYLINT
# For general linting.
# > # https://docs.pytest.org/en/latest/customize.html?highlight=pyproject#pyproject-toml
# > https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
# ========================================
[tool.pylint.format]
max-line-length = "88"

[tool.pylint.ini_options]
testpaths = ["tests"]
ignore = [".tox", ".direnv", "python_venv"]

[tool.pylint.BASIC]
good-names = [
  "i",
  "j",
  "k",
  "idx",
  "jdx",
  "kdz",
  "_",
  "x",
  "y",
  "z",
  "tz",
  "n",
  "m",
  "df",
  "f",
  "c",
  "dt",
]

[tool.pylint.messages_control]
disable = "C0330, C0326"


# ========================================
# MYPY
# > For type-hint checking.
# > https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
# ========================================
[tool.mypy]
# plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
# For strinct mypy...
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "pandas",
  "st_aggrid",
  "altair",
  "diagrams",
  "mlflow",
  "matplotlib",
  "matplotlib.pyplot",
  "seaborn",
  "sklearn",
  "sklearn.metrics",
  "sklearn.model_selection",
  "sklearn.datasets",
  "invoke",
]
ignore_missing_imports = true

# ========================================
# PYDANTIC-MYPY
# > Integrating pydantic into mypy.
# ========================================
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


# ========================================
# BLACK
# > For opinionated formatting.
# ========================================
[tool.black]
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# ========================================
# PYRIGHT
# > To stop a "pyright" warning that it's not in here.
# ========================================
[tool.pyright]


# ========================================
# TOX
# > For standardized texting.
# > https://tox.wiki/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
# ========================================
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
deps =
  pytest
  pytest-cov

commands = pytest --cov=pytemplate tests/
    coverage report -m
"""


# ========================================
# ISORT
# > For sorting imports.
# > https://timothycrosley.github.io/isort/
# ========================================
[tool.isort]

skip = [
  '.bzr',
  '.direnv',
  '.eggs',
  '.git',
  '.hg',
  '.mypy_cache',
  '.nox',
  '.pants.d',
  '.svn',
  '.tox',
  '.venv',
  '_build',
  'buck-out',
  'build',
  'dist',
  'node_modules',
  'venv',
  'python_venv',
]

skip_gitignore = true
line_length = 88
profile = "black"

# ========================================
# PYDOCSTYLE
# > For linting docstrings.
# > http://www.pydocstyle.org/en/stable/usage.html
# ========================================
[pydocstyle]
inherit = false
# ignore = D100

#==========================================
# NBQA
# > For notebook linting and styling.
# > https://nbqa.readthedocs.io/en/latest/configuration.html#configuration
# =========================================
[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=E402",  # module level import not at top of file; can't do this in jupyter for these posts.
]
